package src;

import java.util.ArrayList;
import java.util.List;

public class Main {

    public static void main(String[] args) {
        Menu menu = new Menu();
        menu.startMenu();


    }

}

// TODO login (saveuserdata), afspilning, savemediadata, watchlater, genre search.