package src;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;

public class User {
    FileIO fileIO = new FileIO();
    Util util = new Util();

    private String username;
    private String password;


    public boolean login(String username, String password, String path) {
        String line;
        String csvSplitBy = ",";
        try (BufferedReader br = new BufferedReader(new FileReader("data/Users.csv"))) {
            while ((line = br.readLine()) != null) {
                String[] userData = line.split(csvSplitBy);
                if (userData.length >= 0 && userData[0].equals(username) && userData[1].equals(password)) {
                    return true;
                }
            }
        } catch (IOException e) {
            System.err.println("Error reading user data: " + e.getMessage());
        }
        return false;
    }
}


